--- a/1.html
+++ b/1.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Demo javascript</h1>
     <button onclick="chaythu()">Click vao day</button>
+
+    <h2> Thêm vào một dòng mới</h2>
     <script src="1.js">
          
     </script>
