--- a/1.html
+++ b/1.html
@@ -10,7 +10,7 @@
     <h1>Demo javascript</h1>
     <button onclick="chaythu()">Click vao day</button>
 
-    <h2> Thêm vào một dòng mới</h2>
+    <h2> Thêm vào một dòng mới mới nữa </h2>
     <script src="1.js">
          
     </script>
